# Multi-Class-Prediction-of-Obesity-Risk

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-and-push.yml
03-Experiments/: 01-Dummy-Model.ipynb  02-XGBoost_Without_FE.ipynb  04-XGBoost_With_Optuna.ipynb  06-AutoGluon.ipynb  06-LightBGM_With_Focal_Loss.ipynb  11-Pycaret.ipynb  12-AutoGluon.ipynb  14-AutoXGB.ipynb  18-Neural-Network.ipynb  Temp-XGBoost_FE_obj_Recall.ipynb  new_mlflow.db
03-Experiments/catboost_info/: learn_error.tsv  time_left.tsv
03-Experiments/catboost_info/learn/: events.out.tfevents
03-Experiments/mlruns/0/94fc8e56bc624009886d3d039e6c4263/metrics/: accuracy  f1  precision  recall  recall_class_0  recall_class_1  recall_class_2  recall_class_3  recall_class_4  recall_class_5  recall_class_6
03-Experiments/mlruns/0/94fc8e56bc624009886d3d039e6c4263/params/: Target_Drift_0  Target_Drift_1  Target_Drift_2  Target_Drift_3  Target_Drift_4  Target_Drift_5  Target_Drift_6
03-Experiments/mlruns/0/94fc8e56bc624009886d3d039e6c4263/tags/: mlflow.log-model.history
03-Experiments/mlruns/0/f69d4ef2f05040688784d1fc9afc2b8b/tags/: mlflow.runName
03-Experiments/mlruns/177690749670845201/1154bbd89cbb4a5fb1ae8b3d7fe86c46/metrics/: MCC  Prec.
03-Experiments/mlruns/177690749670845201/13c4ae17af004850b0345187686bf6e5/metrics/: Accuracy  Prec.
11-Docker/: 02-LightBGM.ipynb  Dockerfile  docker_api.py  dockerised_fastapi.py  notebook.ipynb  requirements.txt  sample_test.csv
Dump/: dump1.ipynb  dump2.ipynb
Streamlit/: app.py
(+685 files in other folders)
